--- a/login.css
+++ b/login.css
@@ -47,11 +47,9 @@ border-radius: 50%;
     padding: 5px;
 }
 .input-group input{
-    width: 100%;
-    padding: 8px ;
+    padding: 10px ;
     border-radius: 8px;
     border: 1px solid black;
-    justify-content: center;
 
 }
 .input-group input:focus{
@@ -69,9 +67,8 @@ border-radius: 50%;
 }
 .btn{
     padding: 10px;
-    width: 170px;
-    background-color: rgb(28, 28, 80);
-    color: snow;
+    width: 180px;
+    background-color: #00C950;
     border-radius: 8px;
     border: none;
     margin-top: 20px;
