--- a/login.css
+++ b/login.css
@@ -68,7 +68,8 @@ border-radius: 50%;
 }
 .btn{
     padding: 10px;
-    width: 180px;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: #00C950;
     border-radius: 8px;
     border: none;
