--- a/login.css
+++ b/login.css
@@ -48,7 +48,8 @@ border-radius: 50%;
     color:white;
 }
 .input-group input{
-    padding: 10px ;
+    padding: 10px;
+    width: 180px;
     border-radius: 8px;
     border: 1px solid black;
 
@@ -68,8 +69,7 @@ border-radius: 50%;
 }
 .btn{
     padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    width: 180px;
     background-color: #00C950;
     border-radius: 8px;
     border: none;
