--- a/login.css
+++ b/login.css
@@ -75,6 +75,7 @@ border-radius: 50%;
     border: none;
     margin-top: 20px;
     cursor: pointer;
+    color: black;
 }
 .register{
     margin-top: 20px;
